Fix collapse mobile ui

--- a/src/components/MarkdownComponent.module.css
+++ b/src/components/MarkdownComponent.module.css
@@ -5,4 +5,5 @@
   padding: 10px;
   border: 0.2em solid grey;
   border-radius: 5px;
+  max-width: 90%;
 }
